--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,3 +8,8 @@ dependencies = [
     "python-dotenv==1.2.1",
     "requests==2.32.5",
 ]
+
+[dependency-groups]
+dev = [
+    "pyinstaller==6.16.0",
+]
